welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: too many arguments for method gauche: ()Unit
        gauche(2)
              ^